test/libyul/yulSyntaxTests/objects/subobject_first.yul
object "A" {
  object "B" {
    code {}
  }

  code {}
}
// ----
// ParserError 2314: (15-21): Expected 'code' but got identifier
